Combined Main and impkementation of Internal Resource agent and its behavior